<resources>
    <string name="app_name">Restaurants Finder</string>

    <string name="radius_selector">Radius Selector</string>
    <string name="radius">Radius: %1$d m</string>

    <string name="pull_to_refresh">Pull to refresh</string>

    <string name="error_message">Something went wrong. Please try again.</string>
    <string name="no_results_found">No restaurants found nearby.</string>

    <string name="restaurant_image">Image of the restaurant</string>
    <string name="open_status_open">Currently OPEN</string>
    <string name="open_status_closed">Currently CLOSED</string>

    <string name="loading">Loading...</string>

    <string name="default_location">New York City</string>

    <string name="loading_more">Loading more...</string>
    <string name="_5km">5km</string>
    <string name="_100_m">100 m</string>
    <string name="_500_meters">500 meters</string>
    <string name="search_location">Search city i.e london</string>
</resources>