<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".presentation.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_radius_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius_selector"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/radius_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_500_meters"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/min_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100_m"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_radius_selector"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/max_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5km"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radius_value_text"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/radius_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_value_text"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_location"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/search_view_background"
        android:textColor="@color/search_text_color"
        android:iconifiedByDefault="false"
        android:layoutDirection="rtl"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/radius_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingVertical="8dp"
            tools:listitem="@layout/item_restaurant" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
